--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "latest",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -43,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-google-maps/api": "^2.20.6",
     "@shadcn/ui": "^0.0.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
@@ -56,6 +58,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "^14.1.0",
@@ -64,6 +67,7 @@
     "pg": "^8.11.3",
     "prisma": "^6.6.0",
     "react": "^18",
+    "react-cookie-consent": "^9.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "latest",
